commit - adding constants & methods for filtering