@@ -3,15 +3,15 @@ package com.bosch.io.boschgitrepos.rest;
 import com.bosch.io.boschgitrepos.domain.model.BoschGitRepo;
 import com.bosch.io.boschgitrepos.domain.service.BoschGitRepoService;
 import com.bosch.io.boschgitrepos.rest.dto.BoschGitRepoDTO;
+import com.bosch.io.boschgitrepos.rest.dto.RepoFilterDTO;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/bosch_repos")
+@RequestMapping("/bosch-repos")
 public class BoschGitReposController {
 
     private final BoschGitRepoService boschGitRepoService;
@@ -21,12 +21,17 @@ public class BoschGitReposController {
     }
 
     @GetMapping()
-    public List<BoschGitRepoDTO> getBoschGitRepos() {
-        List<BoschGitRepo> boschGitRepos = boschGitRepoService.getPublicBoshGitRepos();
+    public List<BoschGitRepoDTO> getBoschGitRepos(RepoFilterDTO repoFilterDTO) {
+        List<BoschGitRepo> boschGitRepos;
+        if (repoFilterDTO == null) {
+            boschGitRepos = boschGitRepoService.getPublicBoshGitRepos();
+        } else {
+            boschGitRepos = boschGitRepoService.getPublicBoshGitRepos(repoFilterDTO.toExample());
+        }
 
         return boschGitRepos.stream()
                 .map(BoschGitRepoDTO::fromModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
